package com.reservas.reservas.creacionales.factory;
@FunctionalInterface public interface PoliticaRecargo { double calcularRecargo(double montoBase); }
