@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "com.reservas.reservas.domain" {
  class Reserva {
    - estado: EstadoReserva
    - estrategiaCancelacion: EstrategiaCancelacion
    - gestorEventos: GestorEventosReserva
    - total: double
    - multaCancelacion: double
    + confirmar(): void
    + cancelar(diasRestantes: int): void
  }
  class ReservaHabitacion
  abstract class Habitacion {
    + liberar(): void
  }
  class HabitacionEstandar {
    - numeroCamas: int
  }
  class SuitePresidencial {
    - amenidadesLujo: List<String>
    - servicioMayordomo: boolean
  }
  class RangoFechas <<record>> {
    + fechaInicio: LocalDate
    + fechaFin: LocalDate
  }
  class Cliente
}

package "com.universidad.reservas.comportamentales.state" {
  interface EstadoReserva {
    + confirmar(contexto: Reserva): void
    + cancelar(contexto: Reserva, diasRestantes: int): void
  }
  class EstadoPendiente
  class EstadoConfirmada
  class EstadoCancelada
}

package "com.universidad.reservas.comportamentales.strategy" {
  interface EstrategiaCancelacion {
    + calcularMulta(reserva: Reserva, diasRestantes: int): double
  }
  class CancelacionFlexible
  class CancelacionEstricta
}

package "com.universidad.reservas.comportamentales.observer" {
  interface ReservaObserver {
    + onReservaCancelada(reserva: Reserva): void
  }
  class GestorEventosReserva {
    - suscriptores: List<ReservaObserver>
    + suscribir(observador: ReservaObserver): GestorEventosReserva
    + desuscribir(observador: ReservaObserver): void
    + notificarCancelacion(reserva: Reserva): void
  }
  class GestorHabitaciones
  class NotificadorCliente
}

Reserva *-- EstadoReserva : estado actual
Reserva *-- EstrategiaCancelacion : estrategia inyectada
Reserva *-- GestorEventosReserva : publica mediante
Reserva --> "1" Cliente
HabitacionEstandar --|> Habitacion
SuitePresidencial --|> Habitacion
Habitacion "1" o-- "0..*" Reserva : historial
Reserva --> "1" RangoFechas : estadia
interface PoliticaRecargo
Reserva o-- "0..*" PoliticaRecargo : politicas aplicadas
RecargoTemporadaAlta ..|> PoliticaRecargo
RecargoCancelacionTardia ..|> PoliticaRecargo
RecargoSinPenalizacion ..|> PoliticaRecargo
ReservaHabitacion --|> Reserva
ReservaHabitacion --> Habitacion

EstadoPendiente ..|> EstadoReserva
EstadoConfirmada ..|> EstadoReserva
EstadoCancelada ..|> EstadoReserva
CancelacionFlexible ..|> EstrategiaCancelacion
CancelacionEstricta ..|> EstrategiaCancelacion
GestorHabitaciones ..|> ReservaObserver
NotificadorCliente ..|> ReservaObserver
GestorEventosReserva o-- "0..*" ReservaObserver : suscriptores
GestorHabitaciones ..> Reserva : libera habitación
NotificadorCliente ..> Reserva : notifica cliente
@enduml
